commit progress bar changes for ip scans